--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,6 @@ scipy>=0.17.1,<0.18
 GDAL>=1.11.0,<2.0
 pyproj>=1.9.5
 git+https://github.com/ANU-Linked-Earth-Data/dggs@61b94530bf709ac6685ee9e81ca0ee74f58168a6
+# This may cause problems if you don't have LLVM 3.7 installed and configured
+correctly
+numba
