--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 numpy>=1.11,<2.0
 h5py>=2.6.0,<3.0
 scipy>=0.17.1,<0.18
+matplotlib>=1.5.1,<1.6.0
 # GDAL is a PITA to install. Might want to follow instructions at
 # http://gis.stackexchange.com/a/119565 if pip install doesn't work. I
 # personally like the answer that recommends
