--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,15 @@ h5py>=2.6.0,<3.0
 scipy>=0.17.1,<0.18
 matplotlib>=1.5.1,<1.6.0
 pytz>=2016.2
+pyproj>=1.9.5
+git+https://github.com/ANU-Linked-Earth-Data/dggs@61b94530bf709ac6685ee9e81ca0ee74f58168a6
+
 # GDAL is a PITA to install. Might want to follow instructions at
 # http://gis.stackexchange.com/a/119565 if pip install doesn't work. I
 # personally like the answer that recommends
 # pip install --global-option=build_ext --global-option="-I/usr/include/gdal" GDAL==`gdal-config --version`
-GDAL>=1.11.0,<2.0
-pyproj>=1.9.5
-git+https://github.com/ANU-Linked-Earth-Data/dggs@61b94530bf709ac6685ee9e81ca0ee74f58168a6
-# This may cause problems if you don't have LLVM 3.7 installed and configured
-correctly
-numba>=0.26,<0.27
+#
+# If you're using Ubuntu <=16.04, you'll need a copy of GDAL 2.X. This PPA is a
+# good place to find that:
+# https://launchpad.net/~ubuntugis/+archive/ubuntu/ubuntugis-unstable
+GDAL>=2.0
