--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-numpy>=1.11,<2.0
-h5py>=2.6.0,<3.0
+numpy>=1.11,<2
+h5py>=2.6.0,<3
 scipy>=0.17.1,<0.18
-matplotlib>=1.5.1,<1.6.0
+matplotlib>=1.5.1,<1.6
 pytz>=2016.2
-pyproj>=1.9.5
+python-dateutil>=2.5.3,<2.6
+pyproj>=1.9.5,<1.10
 git+https://github.com/ANU-Linked-Earth-Data/dggs@61b94530bf709ac6685ee9e81ca0ee74f58168a6
 # python-hdf4 (pyhdf fork) requires libhdf4-dev on Ubuntu
 python-hdf4>=0.9,<0.10
